--- a/src/ViewQuestions.fxml
+++ b/src/ViewQuestions.fxml
@@ -1,21 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #9dbdf2;" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label text="Questions" />
-      <ListView fx:id="questionList" prefHeight="384.0" prefWidth="600.0" />
-      <HBox prefHeight="30.0" prefWidth="600.0">
-         <children>
-            <Button mnemonicParsing="false" onAction="#showQuestion" text="Show Question" />
-            <Button fx:id="deleteBtn" disable="true" mnemonicParsing="false" text="Delete Question" />
-            <Button fx:id="commentBtn" disable="true" mnemonicParsing="false" text="See Comments" />
-         </children>
-      </HBox>
+      <Accordion fx:id="acc" />
+      <Button mnemonicParsing="false" onAction="#back" text="Back to Course" />
    </children>
 </VBox>
