--- a/src/newQuestion.fxml
+++ b/src/newQuestion.fxml
@@ -1,36 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="413.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="488.0" prefWidth="600.0" style="-fx-background-color: #9dbdf2;" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="578.0" minWidth="10.0" prefWidth="578.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="293.0" minWidth="10.0" prefWidth="22.0" />
   </columnConstraints>
   <rowConstraints>
-      <RowConstraints maxHeight="130.0" minHeight="10.0" prefHeight="58.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="130.0" minHeight="10.0" prefHeight="58.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="130.0" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="262.0" minHeight="10.0" prefHeight="239.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="130.0" minHeight="10.0" prefHeight="39.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="130.0" minHeight="10.0" prefHeight="63.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="130.0" minHeight="10.0" prefHeight="61.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="130.0" minHeight="10.0" prefHeight="52.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="130.0" minHeight="10.0" prefHeight="52.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="262.0" minHeight="10.0" prefHeight="170.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="33.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="33.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label text="Body Question: " />
-      <TextField GridPane.rowIndex="1" />
-      <Label text="Options:" GridPane.rowIndex="2" />
-      <TableView prefHeight="233.0" prefWidth="531.0" GridPane.rowIndex="3">
-        <columns>
-          <TableColumn prefWidth="453.0" text="Option" />
-          <TableColumn prefWidth="124.0" text="Correct Answer" />
-        </columns>
-      </TableView>
-      <Button mnemonicParsing="false" text="Add Question" GridPane.rowIndex="4" />
+      <Label text="Body Question: ">
+         <GridPane.margin>
+            <Insets left="20.0" />
+         </GridPane.margin></Label>
+      <TextField fx:id="bodyTextField" prefHeight="35.0" prefWidth="578.0" GridPane.rowIndex="1" />
+      <Button mnemonicParsing="false" onAction="#addOption" text="Add an Option" GridPane.rowIndex="2">
+         <GridPane.margin>
+            <Insets left="20.0" />
+         </GridPane.margin>
+      </Button>
+      <Label text="Options:" GridPane.rowIndex="3">
+         <GridPane.margin>
+            <Insets left="30.0" />
+         </GridPane.margin></Label>
+      <ListView fx:id="optionsList" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5" />
+      <Button fx:id="addBtn" mnemonicParsing="false" onAction="#addQuestion" text="Add Question" GridPane.rowIndex="6" />
+      <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="4">
+         <children>
+            <Label text="Question Difficulty:">
+               <padding>
+                  <Insets right="20.0" />
+               </padding>
+            </Label>
+            <ComboBox fx:id="difficulty" prefHeight="25.0" prefWidth="36.0" />
+            <Label text="Time to Solve">
+               <padding>
+                  <Insets left="20.0" />
+               </padding>
+            </Label>
+            <TextField fx:id="time" prefHeight="25.0" prefWidth="43.0">
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin>
+            </TextField>
+         </children>
+         <GridPane.margin>
+            <Insets left="20.0" />
+         </GridPane.margin>
+      </HBox>
+      <Button mnemonicParsing="false" onAction="#back" text="Back to Course" GridPane.rowIndex="7">
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
+      </Button>
    </children>
 </GridPane>
